--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 <body>
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <h1>Hello worlds, we are software developers!</h1>
+  <navbar id = "navbar">
+    <a href = "#projects">
+    </a>
+  </navbar>
+<section id = "welcome-section">
+    <h1>Title</h1>
+  </section>
+  <section id = "projects">
+    <a></a>
+    <h2 class = "project-tile" ></h2>
+  </section>
+  <a id = "profile-link" target = "_blank"></a>
+  <style>
+@media(max-width: 600px){
+
+}
+  </style>
+
   <section id="welcom-section">
     <h1>Title</h1>
   </section>
